--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,126 +1,174 @@
-img{
-  width: 60%;
-  align-self: center;
+img {
+    width: 60%;
+    align-self: center;
 }
 
-.card{
-  border: rgb(103, 102, 105) 3px solid;
-  display: flex;  
-  flex-direction: column;
-  margin-left:5%;
-  margin-right:5%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+.card {
+    border: rgb(103, 102, 105) 3px solid;
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
-.row{
-  display: flex;  
-  flex: 1;
-  flex-direction: row;
-  margin: auto;
-  margin-top: 1%;
-  justify-content: center;
-  padding:20px;
+.row {
+    display: flex;
+    flex: 1;
+    flex-direction: row;
+    margin: auto;
+    margin-top: 1%;
+    justify-content: center;
+    padding: 20px;
 }
 
-.container{
-  justify-content: center;
-}
-.details{
-  font-size: 20px;
-  color: rgb(97, 64, 128);
-  padding:20px;
+.container {
+    justify-content: center;
 }
 
-.title{
-  font-size: 20px;
-  background-color: rgb(97, 64, 128);
-  color: white;
-  text-align: center;
-  margin:20px;
-  padding:5px;
+.details {
+    font-size: 20px;
+    color: rgb(97, 64, 128);
+    padding: 20px;
 }
 
-.homepage_links{
-  color:  rgb(97, 64, 128);
-  padding: 25%;
-  font-size: larger;
-  }
-
-.loginlink{
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+.title {
+    font-size: 20px;
+    background-color: rgb(97, 64, 128);
+    color: white;
+    text-align: center;
+    margin: 20px;
+    padding: 5px;
 }
 
-.banner{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  flex:1
+.homepage_links {
+    color: rgb(97, 64, 128);
+    padding: 25%;
+    font-size: larger;
+}
+
+.loginlink {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    text-align: center;
 }
 
 .form_panel {
-  padding:2%;
-  display: flex;
-  flex-direction: column;
-  border-radius: 50px;
-  text-align:center;
-  box-shadow: 2px 2px 2px 3px #999;
-  margin: auto;
-  min-width: 350px;
-  width: 80%;
-  margin-top:3%;
-  background-color: black;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 2px 3px #999;
+    margin: auto;
+    min-width: 350px;
+    width: 80%;
+    margin-top: 3%;
+    background-color: black;
 }
 
-.navitems{
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content: flex-start;
-  justify-self: center;
+.navitems {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    flex: 1;
+    justify-content: flex-start;
+    justify-self: center;
 }
 
-.nav_item{
-  margin-left:15px;
-  font-size: 20px;
-  color: black;
-  align-self: center;
+.nav_item {
+    margin-left: 15px;
+    font-size: 20px;
+    color: black;
+    align-self: center;
 }
 
-.username{
-  font: 30px sans-serif;
-  color:black;
-  justify-content: 'flex-end';
-  align-self:flex-end;
-  vertical-align: middle;
+.username {
+    font: 30px sans-serif;
+    color: black;
+    justify-content: 'flex-end';
+    align-self: flex-end;
+    vertical-align: middle;
 }
 
 .input_panel {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  flex: 1;
-  justify-content:flex-end;
-  align-items: flex-end;
-  vertical-align: middle;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    flex: 1;
+    justify-content: flex-end;
+    align-items: flex-end;
+    vertical-align: middle;
 }
 
-.small_header{
-  font: 30px sans-serif;
-  color:black;
-  margin: .5cm;
+.small_header {
+    font: 30px sans-serif;
+    color: black;
+    margin: .5cm;
 }
 
 .img_icon {
-  align-self: center;
-    width:40px;
-    background-color:#0C9;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;  
+    align-self: center;
+    width: 40px;
+    background-color: #0C9;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 3px #999;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    background-color: #f4f4f4;
+}
+
+.contact-container {
+    max-width: 800px;
+    margin: 40px auto;
+    background: #fff;
+    padding: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+.contact-container h2 {
+    margin-top: 0;
+}
+
+.contact-info {
+    margin-bottom: 20px;
+    line-height: 1.6;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.contact-form button {
+    background-color: #333;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.contact-form button:hover {
+    background-color: #555;
 }
